# doppio_next

./: .gitignore  DEVELOPER.md  MANIFEST.in  README.md  SOP.md  doppio-research.md  license.txt  pyproject.toml
docker/: README.md  docker-compose.yml  init-bench.sh
docs/: admin-panel-spec.md
doppio_next/: hooks.py  modules.txt
doppio_next/commands/: __init__.py  next_generator.py
doppio_next/templates_next/: next.config.ts
doppio_next/templates_next/_backend/: website_api.py
doppio_next/templates_next/_variants/: brand-theme.css  next.config.standalone.ts
doppio_next/templates_next/scripts/: copy-export.mjs
doppio_next/templates_next/src/app/: layout.tsx  not-found.tsx  page.tsx  template.tsx
doppio_next/templates_next/src/components/: app-header.tsx  app-providers.tsx  auth-shell.tsx  home-designs.tsx  motion.tsx  site-header.tsx  stat-card.tsx  theme-provider.tsx
doppio_next/templates_next/src/lib/: auth.ts  csrf.ts  frappe.ts  socket.ts  use-require-auth.ts  (+1 more)
infra/: erpnext-backend-1.json  erpnext-frontend-1.json  erpnext-queue-long-1.json  erpnext-queue-short-1.json  erpnext-redis-cache-1.json  erpnext-redis-queue-1.json  erpnext-scheduler-1.json  erpnext-websocket-1.json  mariadb-database.json  networks.txt  volumes.txt
infra/erpnext-compose/: CUTOVER.md  docker-compose.yml
skill/doppio-next-frontend/: SKILL.md
skill/doppio-next-frontend-workspace/iteration-1/: benchmark.json  benchmark.md  review.html
skill/doppio-next-frontend/evals/: evals.json
skill/doppio-next-frontend/references/: integration-contracts.md  page-patterns.md
(+45 files in other folders)
