[project]
name = "doppio_next"
authors = [
    { name = "Adimyra", email = "admin@adimyra.com" }
]
description = "Attach Next.js + TypeScript + Tailwind v4 + shadcn/ui frontends to Frappe/ERPNext apps."
# Works on Frappe/ERPNext v15 (Python 3.10+, Node 18/20) and v16 (Python 3.14, Node 24)
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe" is installed and managed by bench.
    "Click~=8.2.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
